--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 						<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 								<h3 id="hd-dlgVerifyAddr">Verify Address</h3>
+								<div id="locInfo"></div>
 						</div>
 						<div class="modal-body">
 								<div id="map-body"></div>
